fix: add overflow to the individual sections instead of the page itself

--- a/src/index.css
+++ b/src/index.css
@@ -159,7 +159,7 @@ button.primary:disabled {
 }
 
 #root {
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
